Add:update ingredient entity.